<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_bike" />

        <!-- Input fields -->
        <LinearLayout style="@style/LinearLayoutEditorStyle2">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <LinearLayout style="@style/LinearLayoutEditorStyle1">>

                <ImageButton
                    android:id="@+id/minus_bike"
                    style="@style/ImageButtonQuantity"
                    android:src="@drawable/minus1" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_quantity"
                    style="@style/EditQuantity"
                    android:hint="@string/quantity" />

                <ImageButton
                    android:id="@+id/plus_bike"
                    style="@style/ImageButtonQuantity"
                    android:src="@drawable/plus1" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/price"
                    android:inputType="number" />

                <!-- Units for price (zł) -->
                <TextView
                    android:id="@+id/label_weight_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_price" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout style="@style/LinearLayoutEditorStyle1">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <LinearLayout style="@style/LinearLayoutEditorStyle2">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords" />

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/call_to_order"
                style="@style/EditorButton"
                android:hint="@string/call_to_order" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>