<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/catalog_name"
            style="@style/TitleListContentTextView" />

        <LinearLayout
            style="@style/LinearLayoutListStyle1"
            android:layout_weight="1">

            <TextView
                android:id="@+id/catalog_price_text"
                style="@style/EditorUnitsStyle2"
                android:text="@string/catalog_price_hard_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/catalog_price"
                style="@style/ListContentTextView" />

            <TextView
                android:id="@+id/label_weight_units2"
                style="@style/EditorUnitsStyle2"
                android:paddingLeft="6dp"
                android:text="@string/unit_price"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutListStyle1">

            <TextView
                android:id="@+id/catalog_quantity_text"
                style="@style/EditorUnitsStyle2"
                android:text="@string/catalog_quantity_hard_text" />

            <TextView
                android:id="@+id/catalog_quantity"
                style="@style/ListContentTextView" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/sell_button"
        style="@style/ListButton"
        android:src="@drawable/sell7" />
</LinearLayout>